# AIZOprojekt

./: ArgumentParser.cpp  ArgumentParser.h  CMakeLists.txt  DynamicArray.cpp  DynamicArray.h  Helper.cpp  Helper.h  README.md  Sorter.cpp  Sorter.h  Timer.cpp  Timer.h  main.cpp  random_numbers.txt
